<resources>

    <string name="app_name">UCLove1</string>

    <!-- main activity -->
    <string name="app_title">UCLove</string>

    <string name="login_pseudo_hint">Pseudo</string>
    <string name="login_password_hint">Password</string>

    <string name="login_button">Log in</string>

    <string name="login_not_yet_registered">Not yet registered?</string>
    <string name="register_button">Register</string>

    <string name="invalid_password">Pseudo or password not valid</string>

    <!-- menu activity -->
    <string name="menu_activity_title">Menu</string>

    <string name="top_menu_settings_title">Settings</string>
    <string name="top_menu_quit_title">Close app</string>

    <string name="overview">Overview</string>

    <string name="button_my_profile">My profile</string>
    <string name="button_find_friends">Find matches</string>
    <string name="button_my_friends">My friends</string>
    <string name="button_messages">Messages</string>
    <string name="button_dates">My dates</string>
    <string name="button_settings">Settings</string>

    <!-- settings activity -->
    <string name="settings_activity_title">Settings</string>

    <string name="enable_sounds">Allow the app to play sounds</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="choose_theme">App theme</string>
    <string name="about">About the app</string>
    <string name="delete_local_database">Delete the local database</string>

    <string name="about_the_app">This application was made for the lesson of oriented object conception at the UCL by the group #Z</string>

    <!-- my profile activity -->
    <string name="my_profile_activity_title">My profile</string>

    <string name="top_menu_change_informations">Edit my profile</string>
    <string name="button_change_informations">Edit my profile informations</string>

    <string name="pseudo">Pseudo</string>
    <string name="family_name">Last name</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="birth_date">Birth date</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="love_status">Love status</string>
    <string name="height">Height</string>
    <string name="description">Description</string>
    <string name="smoker">Smoker</string>
    <string name="interested_in">Interested in</string>
    <string name="children_nb">Number of children</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="title_activity_tmp">Tmp</string>

    <!-- edit profile activity -->
    <string name="edit_profile_activity_title">Edit my profile</string>

    <string name="have_to_be_filled">*Have to be filled</string>
    <string name="star_pseudo">Pseudo*</string>
    <string name="star_family_name">Last name*</string>
    <string name="star_first_name">First name*</string>
    <string name="star_birth_date">Birth date*</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="star_gender">Gender*</string>
    <string name="star_love_status">Love status*</string>
    <string name="star_country">Country*</string>
    <string name="star_city">City*</string>

    <string name="top_menu_save_title">Save</string>

    <!-- friends activity -->
    <string name="friends_activity_title">My friends</string>
    <string name="relationship_status">Relationship status</string>

    <!-- dates activity -->
    <string name="dates_activity_title">My dates</string>
    <string name="no_date_with_no_friends">You can\'t set a date with someone that\'s not your friend</string>

    <!-- profile activity -->
    <string name="profile_activity_title">Profile</string>

    <string name="invisible">Not visible</string>

    <string name="ask_as_friend">Ask as friend</string>
    <string name="accept_request">Accept request</string>
    <string name="request_sent">Request sent</string>
    <string name="blocked">Blocked</string>
    <string name="unfriend">Unfriend</string>

    <string name="already_sent">You already sent a request to that user</string>
    <string name="cant_send_request">You can\'t send a request to that user</string>
    <string name="unfriended">Unfriended</string>
    <string name="request_accepted">Request accepted</string>

    <!-- profile overview -->
    <string name="request">Request</string>
    <string name="rejection">Blocked</string>
    <string name="years_old">years old</string>

    <!-- conversations activity -->
    <string name="conversations_activity_title">Conversations</string>
    <string name="last_message">Last message</string>
    <string name="message_read">Read</string>
    <string name="message_not_read">New message</string>

    <!-- chat activity -->
    <string name="chat_activity_title">Chat</string>
    <string name="send">Send</string>
    <string name="your_message">Your message</string>

    <!-- message -->
    <string name="message">Message</string>
    <string name="message_details">Message details</string>
    <string name="close_popup">Close</string>
    <string name="sent_on">Sent on :</string>
    <string name="read_on">Read on :</string>
    <string name="not_read_yet">Not read yet</string>

    <!-- date overview -->
    <string name="date_time_or_asked" translatable="false">Datetime or asked</string>
    <string name="new_date_to_set">Yet to set</string>

    <!-- date activity -->
    <string name="date_details">Date details</string>
    <string name="date_with">Date with</string>
    <string name="at">At :</string>
    <string name="on">On </string>

    <!-- set date activity -->
    <string name="set_date_activity_title_new">Set new date</string>
    <string name="set_date_activity_title_part">Set date with</string>
    <string name="enter_friends_pseudo">Enter your friend\'s pseudo</string>
    <string name="enter_your_disponibilities">Enter your disponibilities for the upcoming week</string>
    <string name="enter_a_location">Enter the location of the date</string>
    <string name="save_date">Done</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- edit profile activity -->
    <string name="must_enter_pseudo">You must specify a pseudo</string>
    <string name="must_enter_family_name">You must specify a last name</string>
    <string name="must_enter_first_name">You must specify a first name</string>
    <string name="must_enter_birth_date">You must specify your birth date</string>
    <string name="must_enter_country">You must specify the country you live in</string>
    <string name="must_enter_city">You must specify the city you live close to</string>
    <string name="pseudo_taken">This pseudo is already taken</string>
    <string name="star_password">Password*</string>
    <string name="no_password">You must specify a password</string>
    <string name="cant_change_password">You can\'t change your password</string>
    <string name="cant_change_pseudo">You can\'t change your pseudo</string>

    <!-- find matches activity -->
    <string name="find_matches_activity_title">Find matches</string>
    <string name="set_filters">Set filters</string>

    <!-- set filter activity -->
    <string name="set_filters_activity_title">Set filters</string>
    <string name="height_fork">Height (~10cm)</string>
    <string name="no_filter">No filter</string>
    <string name="save_filters">Save filters</string>

    <!-- arrays -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other">Other</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="both">Both</string>
    <string name="none">None</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="couple">Couple</string>
    <string name="widower">Widower</string>
    <string name="complicated">It\'s complicated</string>

    <!-- edit visibility activity -->
    <string name="edit_visibility_activity_title">Edit the visibility of my informations</string>
    <string name="profile_picture">Profile picture</string>

    <string name="visibility_public">Public</string>
    <string name="visibility_private">Private</string>
    <string name="visibility_friends">Friends</string>

    <!-- choose profile picture activity -->
    <string name="choose_profile_picture_title">Choose a profile picture</string>
    <string name="choose_profile_picture">Touch a picture to add or remove it from your pictures</string>
    <string name="choose_as_other_picture">Choose as profile picture</string>

    <!-- new message activity -->
    <string name="who_start_conversation_with">Who do you want to start a conversation with?</string>
    <string name="type_friend_pseudo">Type your friend\'s pseudo</string>
    <string name="done">Done</string>
    <string name="no_message_to_no_friend">You can\'t send a message to someone that\'s not your friend</string>
    <string name="new_message_activity_title">Start a new conversation</string>

    <string name="cant_edit_visibility">You will be able to edit the visibility informations once registered</string>

</resources>
