<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grz.sinf1225.uclove1.Dating.SetDateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_overview_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/title_margins"

            android:textStyle="bold"
            android:textSize="@dimen/title_font_size"
            android:text="@string/enter_your_disponibilities"/>

        <CheckBox
            android:id="@+id/sunday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sunday"/>

        <CheckBox
            android:id="@+id/monday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/monday"/>

        <CheckBox
            android:id="@+id/tuesday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/tuesday"/>
        <CheckBox
            android:id="@+id/wednesday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/wednesday"/>
        <CheckBox
            android:id="@+id/thursday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/thursday"/>
        <CheckBox
            android:id="@+id/friday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/friday"/>
        <CheckBox
            android:id="@+id/saturday_checkbox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/saturday"/>

        <EditText
            android:id="@+id/edit_text_location"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/location_edit_text_margin_top"

            android:hint="@string/enter_a_location"/>

        <Button
            android:id="@+id/save_date_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:drawableLeft="@drawable/ic_done_black_24dp"
            android:text="@string/save_date"

            android:onClick="onSaveDateButtonClicked"/>

    </LinearLayout>

</ScrollView>
