<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grz.sinf1225.uclove1.Chat.NewMessageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/who_start_conversation_with"
        android:textStyle="bold"
        android:textSize="@dimen/title_font_size"/>

    <EditText
        android:id="@+id/friend_pseudo_edit_text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/type_friend_pseudo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:drawableLeft="@drawable/ic_done_black_24dp"
        android:text="@string/done"

        android:onClick="onDoneButtonClicked"/>

</LinearLayout>
