<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    style="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.grz.sinf1225.uclove1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="@dimen/app_title_size" />

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edit_text_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginLeft="@dimen/edit_text_margin_horizontal"
                android:layout_marginRight="@dimen/edit_text_margin_horizontal"
                android:layout_marginBottom="@dimen/edit_text_margin_vertical"
                android:layout_marginTop="@dimen/edit_text_margin_vertical"
                android:background="@color/white"
                android:hint="@string/login_pseudo_hint" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:layout_marginLeft="@dimen/edit_text_margin_horizontal"
                android:layout_marginRight="@dimen/edit_text_margin_horizontal"
                android:layout_marginBottom="@dimen/edit_text_margin_vertical"
                android:layout_marginTop="@dimen/edit_text_margin_vertical"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/big_button_padding"
                android:layout_marginLeft="@dimen/big_button_margin_horizontal"
                android:layout_marginRight="@dimen/big_button_margin_horizontal"
                android:layout_marginBottom="@dimen/button_margin_vertical"
                android:layout_marginTop="@dimen/button_margin_vertical"
                android:background="@color/colorAccent"
                android:text="@string/login_button"
                android:onClick="login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_not_yet_registered"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="@dimen/small_button_padding"
                android:layout_marginLeft="@dimen/small_button_margin_horizontal"
                android:layout_marginRight="@dimen/small_button_margin_horizontal"
                android:layout_marginBottom="@dimen/button_margin_vertical"
                android:layout_marginTop="@dimen/button_margin_vertical"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/register_button"
                android:onClick="startRegistration"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
