<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grz.sinf1225.uclove1.MenuActivity">

    <View
        android:id="@+id/overview_box"

        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_picture_edge_size"
        android:background="@color/white"
        android:elevation="@dimen/view_elevation"

        android:clickable="true"
        android:onClick="onOverviewClicked"/>

    <TextView
        android:id="@+id/overview"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"

        android:layout_marginBottom="@dimen/textview_title_margin_vertical"
        android:layout_marginTop="@dimen/textview_title_margin_vertical"
        android:layout_marginLeft="@dimen/textview_margin_horizontal" android:layout_marginStart="@dimen/textview_margin_horizontal"
        android:layout_marginRight="@dimen/textview_margin_horizontal" android:layout_marginEnd="@dimen/textview_margin_horizontal"

        android:elevation="@dimen/view_elevation"

        android:text="@string/overview"
        android:textSize="@dimen/overview_text_size"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/pseudo"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"

        android:layout_marginTop="@dimen/textview_margin_horizontal"
        android:layout_marginBottom="@dimen/textview_margin_horizontal"
        android:layout_marginLeft="@dimen/textview_margin_vertical" android:layout_marginStart="@dimen/textview_margin_vertical"
        android:layout_marginRight="@dimen/textview_margin_vertical" android:layout_marginEnd="@dimen/textview_margin_vertical"

        android:elevation="@dimen/view_elevation"/>

    <TextView
        android:id="@+id/age"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"

        android:layout_marginTop="@dimen/textview_margin_horizontal"
        android:layout_marginBottom="@dimen/textview_margin_horizontal"
        android:layout_marginLeft="@dimen/textview_margin_vertical"
        android:layout_marginStart="@dimen/textview_margin_vertical"
        android:layout_marginRight="@dimen/textview_margin_vertical"
        android:layout_marginEnd="@dimen/textview_margin_vertical"

        android:elevation="@dimen/view_elevation"/>

    <ImageView
        android:id="@+id/profile_picture"

        android:layout_width="@dimen/profile_picture_edge_size"
        android:layout_height="@dimen/profile_picture_edge_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"

        android:padding="@dimen/profile_picture_padding"

        android:elevation="@dimen/view_elevation" />

    <!-- To have 2 colons of the same size -->
    <View
        android:id="@+id/centered_view"

        android:layout_width="@dimen/colon_gap"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_my_profile"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_box"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/centered_view"
        android:layout_toStartOf="@id/centered_view"

        android:drawableTop="@drawable/ic_person_black_48dp"
        android:text="@string/button_my_profile"

        android:onClick="onMyProfileButtonClicked"/>

    <Button
        android:id="@+id/button_find_friends"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview_box"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/button_my_profile"
        android:layout_toEndOf="@id/centered_view"

        android:drawableTop="@drawable/ic_whatshot_black_48dp"
        android:text="@string/button_find_friends"

        android:onClick="onFindFriendsButtonClicked"/>

    <Button
        android:id="@+id/button_my_friends"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/centered_view"
        android:layout_toStartOf="@id/centered_view"
        android:layout_below="@id/button_my_profile"

        android:drawableTop="@drawable/ic_people_black_48dp"
        android:text="@string/button_my_friends"

        android:onClick="onMyFriendsButtonClicked"/>

    <Button
        android:id="@+id/button_messages"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/centered_view"
        android:layout_toEndOf="@id/centered_view"
        android:layout_below="@id/button_find_friends"

        android:drawableTop="@drawable/ic_chat_black_48dp"
        android:text="@string/button_messages"

        android:onClick="onMessagesButtonClicked"/>

    <Button
        android:id="@+id/button_dates"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/centered_view"
        android:layout_toStartOf="@id/centered_view"
        android:layout_below="@id/button_my_friends"

        android:drawableTop="@drawable/ic_person_pin_circle_black_48dp"
        android:text="@string/button_dates"

        android:onClick="onMyDatesButtonClicked"/>

    <Button
        android:id="@+id/button_settings"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/centered_view"
        android:layout_toEndOf="@id/centered_view"
        android:layout_below="@id/button_messages"

        android:drawableTop="@drawable/ic_settings_black_48dp"
        android:text="@string/button_settings"

        android:onClick="onSettingsButtonClicked"/>

</RelativeLayout>
